git commit -m "Added a stop/start mechanism for the scheduler, as well as a way to modify its run-every-x time dynamically " git push -u origin main