@@ -2,6 +2,7 @@ package com.chaletta.chalettaperformance.config;
 
 import com.chaletta.chalettaperformance.security.JwtFilter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -15,8 +16,9 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
+
+import java.util.Arrays;
 import java.util.List;
-import org.springframework.beans.factory.annotation.Value;
 
 @Configuration
 @EnableWebSecurity
@@ -28,16 +30,32 @@ public class SecurityConfig {
     @Value("${app.cors.allowed-origins}")
     private String allowedOrigins;
 
-
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+
         http
                 .cors(cors -> cors.configurationSource(request -> {
+
                     CorsConfiguration config = new CorsConfiguration();
-                    config.setAllowedOrigins(List.of(allowedOrigins));
-                    config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
+                    List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                            .map(String::trim)
+                            .toList();
+
+                    config.setAllowedOrigins(origins);
+
+                    config.setAllowedMethods(Arrays.asList(
+                            "GET", "POST", "PUT", "DELETE", "OPTIONS"
+                    ));
+
                     config.setAllowedHeaders(List.of("*"));
+
+                    config.setExposedHeaders(List.of("Authorization"));
+
                     config.setAllowCredentials(true);
+
+                    config.setMaxAge(3600L);
+
                     return config;
                 }))
                 .csrf(csrf -> csrf.disable())
@@ -58,6 +76,7 @@ public class SecurityConfig {
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+
         return http.build();
     }
 
